Button Spacing corrected, working on background

--- a/ansible-middleware-nextgen/src/App.css
+++ b/ansible-middleware-nextgen/src/App.css
@@ -47,6 +47,11 @@
   background: rgba(128, 128, 128, 0.301);
 }
 
-.flex-continer{
-  display: flex;
+.span { 
+  float: right; 
+  width: 400px; 
+}
+
+.Split {
+  background: #000000;  
 }
